view: Criação/Estilização da página agenda

--- a/home.html
+++ b/home.html
@@ -7,16 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rufina&display=swap">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Loopis Agenda</title>
 </head>
 
 <body>
-    <div class="container-de-texto">
-        <div class="texto">
+    <div class="container-de-texto-home">
+        <div class="texto-home">
             <h1>Agenda Loopis</h1>
             <p>Seja bem vindo a Agenda da Loopis. Vamos começar a anotar suas programações?</p>
         </div>
-        <a href="#"><button>Começar</button></a>
+        <a href="agenda.html" rel="next" target="_self"><button>Começar</button></a>
     </div>
     <picture>
         <source media="(max-width: 550px)" srcset="img/Imagem-home-300.png" type="image/png">
