--- a/home.html
+++ b/home.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <div class="container-de-texto-home">
+    <section class="container-de-texto-home">
         <div class="texto-home">
             <h1>Agenda Loopis</h1>
             <p>Seja bem vindo a Agenda da Loopis. Vamos começar a anotar suas programações?</p>
         </div>
         <a href="agenda.html" rel="next" target="_self"><button>Começar</button></a>
-    </div>
+    </section>
     <picture>
         <source media="(max-width: 550px)" srcset="img/Imagem-home-300.png" type="image/png">
         <source media="(max-width: 850px)" srcset="img/Imagem-home-400.png" type="image/png">
