--- a/agenda.html
+++ b/agenda.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rufina&display=swap">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="index.js" defer></script>
     <title>Loopis Agenda</title>
 </head>
