--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rufina&display=swap">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Loopis Agenda</title>
 </head>
 
 <body>
-    <section class="container-de-texto-home">
-        <div class="texto-home">
-            <h1>Agenda Loopis</h1>
-            <p>Seja bem vindo a Agenda da Loopis. Vamos começar a anotar suas programações?</p>
-        </div>
-        <a href="agenda.html" rel="next" target="_self"><button>Começar</button></a>
-    </section>
-    <picture>
-        <source media="(max-width: 550px)" srcset="img/Imagem-home-300.png" type="image/png">
-        <source media="(max-width: 850px)" srcset="img/Imagem-home-400.png" type="image/png">
-        <source media="(max-width: 1000px)" srcset="img/Imagem-home-500.png" type="image/png">
-        <source media="(max-width: 1350px)" srcset="img/Imagem-home-600.png" type="image/png">
-        <source media="(max-width: 1500px)" srcset="img/Imagem-home-800.png" type="image/png">
-        <source media="(max-width: 1700px)" srcset="img/Imagem-home-900.png" type="image/png">
-        <img src="img/Imagem-home-1000.png" alt="">
-    </picture>
+    <main id="home">
+        <section class="container-da-home">
+            <div class="texto-home">
+                <h1>Agenda Loopis</h1>
+                <p>Seja bem vindo a agenda da Loopis. Vamos começar a anotar suas programações?</p>
+            </div>
+            <a href="agenda.html" rel="next" target="_self"><button>Começar</button></a>
+        </section>
+        <picture>
+            <source media="(max-width: 320px)" srcset="img/Imagem-home-200.png" type="image/png">
+            <source media="(max-width: 425px)" srcset="img/Imagem-home-300.png" type="image/png">
+            <source media="(max-width: 768px)" srcset="img/Imagem-home-400.png" type="image/png">
+            <source media="(max-width: 1024px)" srcset="img/Imagem-home-600.png" type="image/png">
+            <source media="(max-width: 1444px)" srcset="img/Imagem-home-800.png" type="image/png">
+            <img src="img/Imagem-home-1000.png" alt="Pessoas planejando atividades">
+        </picture>
+    </main>
 </body>
 
 </html>
